# tpt-chassis

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rust-toolchain.toml  spec.txt  todo 1260718.md  todo.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  hil.yml
.kilo/plans/: 1784340228073-tpt-chassis-review-plan.md
agl/: Cargo.toml
agl/src/: can_socket.rs  lib.rs  ota_storage.rs
agl/tests/: validate.rs
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/examples/: autonomy_lane_keep.rs  custom_stack.rs  hello_ecu.rs  ota_update.rs  uds_diagnostics.rs
core/src/: autonomy.rs  autosar.rs  bus.rs  can.rs  isotp.rs  lib.rs  lin.rs  ota.rs  safety.rs  someip.rs  uds.rs
docs/: phase-06-rtos.md  phase-07-hardware.md  phase-08-vehicle.md  phase-09-safety.md  phase-10-ecosystem.md  safety-case.md
flight-control/: Cargo.toml
flight-control/src/: lib.rs
sim/: Cargo.toml
sim/src/: can.rs  lib.rs  lin.rs  someip.rs
sim/tests/: autonomy_can.rs  integration.rs  uds_can.rs
templates/ecu-crate/: Cargo.toml  README.md  signals.toml
templates/ecu-crate/src/: main.rs
zephyr/: Cargo.toml
zephyr/src/: ffi.rs  lib.rs  ota_storage.rs
zephyr/tests/: validate.rs
